--- a/code/public/docs/zh-CN/fe__2/面试题/第5天__5.md
+++ b/code/public/docs/zh-CN/fe__2/面试题/第5天__5.md
@@ -31,9 +31,13 @@ CSS3 中新增的伪元素有以下这些:
 ```
 ### [js] [写一个把字符串大小写切换的方法](https://github.com/haizlin/fe-interview/issues/15)
 ```js
-function lowerSwapUpper(str) {
-  return str.replace(/([A-Z])([a-z])/g, (_, $1, $2) => {
-    return $1.toLowerCase()+$2.toUpperCase()
-  })
+function transformCode(code) {
+    return code.replace(/([A-Z])|([a-z])/g, function(match, $1, $2) {
+        if ($1) {
+            return $1.toLowerCase()
+        } else if ($2) {
+            return $2.toUpperCase()
+        }
+    });
 }
 ```
