--- a/code/public/docs/zh-CN/fe__2/基础/微服务/微服务通信.md
+++ b/code/public/docs/zh-CN/fe__2/基础/微服务/微服务通信.md
@@ -32,7 +32,7 @@ actions 通信及 shared 通信
 - offGlobalStateChange：取消 观察者 函数 - 该实例不再响应 globalState 变化。
 
 我们来画一张图来帮助大家理解（见下图）
-![](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/框架/img/1.png)
+![](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/基础/微服务/img/1.png)
 我们从上图可以看出，我们可以先注册 观察者 到观察者池中，然后通过修改 `globalState` 可以触发所有的 观察者 函数，从而达到组件间通信的效果。
 
 ### 通信实例
@@ -187,7 +187,7 @@ export async function mount(props: any) {
 到这里，`qiankun` 基础通信 就完成了！我们在主应用中实现了登录功能，登录拿到 `token` 后存入 `globalState` 状态池中。在进入子应用时，我们使用 `actions` 获取 `token`，再使用 `token` 获取到用户信息，完成页面数据渲染！
 
 最后我们画一张图帮助大家理解这个流程（见下图）：
-![](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/框架/img/2.png)
+![](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/基础/微服务/img/2.png)
 
 
 
@@ -426,7 +426,7 @@ export default {
   `Shared` 通信方式也是有利有弊，更高的维护成本带来的是应用的健壮性和可维护性。
 
 最后我们来画一张图对 `shared` 通信的原理和流程进行解析（见下图）：
-![](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/框架/img/3.png)
+![](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/基础/微服务/img/3.png)
 
 个人总结一下实践应用的几个步骤：
 
