--- a/code/public/docs/zh-CN/fe__2/基础/tool/正则知识点.md
+++ b/code/public/docs/zh-CN/fe__2/基础/tool/正则知识点.md
@@ -207,4 +207,4 @@ function escapeHtml(str) {
 [参考资料](https://zhuanlan.zhihu.com/p/274538391)
 
 
-![正则](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/基础/tool/img/1.png)
+![正则](<%= BASE_URL %>/docs/zh-CN/fe<%= CONST_FG_SORT %>2/基础/tool/img/正则.png)
